Add cover page with translations

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,13 +1,21 @@
 {
-  "Intro": "Intro",
-  "Projects": "Projects",
-  "Contact me": "Contact me",
-  "Admin": "Admin",
-  "Light mode": "Light mode",
-  "Dark mode": "Dark mode",
-  "Switch theme": "Switch theme",
-  "LinkedIn profile": "LinkedIn profile",
-  "Twitter profile": "Twitter profile",
-  "Github profile": "Github profile",
-  "Downloadable oldschool CV Pdf": "Downloadable oldschool CV Pdf"
+  "education": "Education",
+  "experience": "Experience",
+  "keywords": "Keywords",
+  "skills": "Skills",
+  "technologies": "Technologies",
+  "intro": "Intro",
+  "projects": "Projects",
+  "contactMe": "Contact me",
+  "admin": "Admin",
+  "lightMode": "Light mode",
+  "darkMode": "Dark mode",
+  "switchTheme": "Switch theme",
+  "linkedInProfile": "LinkedIn profile",
+  "twitterProfile": "Twitter profile",
+  "githubProfile": "Github profile",
+  "downloadableCV": "Downloadable oldschool CV Pdf",
+  "oppositeLang": "Suomeksi",
+  "programmingLanguages": "Programming languages",
+  "loading": "Loading ..."
 }
