Implement initial version for projects and update data storage

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,4 +1,5 @@
 {
+  "loading": "Loading ...",
   "education": "Education",
   "experience": "Experience",
   "keywords": "Keywords",
@@ -17,7 +18,8 @@
   "downloadableCV": "Downloadable oldschool CV Pdf",
   "oppositeLang": "Suomeksi",
   "programmingLanguages": "Programming languages",
-  "loading": "Loading ...",
+  "checkItOut": "Check it out",
+  "reCaptchaMissing": "Please, let me know that you're not a bot!",
   "yourName": "Your Name",
   "yourEmail": "Your Email",
   "yourSubject": "Your Subject",
