--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -29,5 +29,6 @@
   "subject": "Subject",
   "message": "Message",
   "thankYou": "Thank you!",
-  "thankYouMessage": "Thank you for your message. I will be in contact with you as soon as possible."
+  "thankYouMessage": "Thank you for your message. I will be in contact with you as soon as possible.",
+  "send": "Send"
 }
