--- a/public/locales/fi/common.json
+++ b/public/locales/fi/common.json
@@ -29,5 +29,6 @@
   "subject": "Aihe",
   "message": "Viesti",
   "thankYou": "Kiitokset!",
-  "thankYouMessage": "Kiitokset viestistäsi. Olen yhteydessä asiasi tiimoilta mahdollisimman pikaisesti."
+  "thankYouMessage": "Kiitokset viestistäsi. Olen yhteydessä asiasi tiimoilta mahdollisimman pikaisesti.",
+  "send": "Lähetä"
 }
